# ESPTimeCast

./: .gitignore  FORK.md  platformio.ini  pyproject.toml
.github/workflows/: unit-tests.yml
ESPTimeCast_ESP32/: ESPTimeCast_ESP32.ino
data/: index.html
src/: ESPTimeCast_ESP32.ino
test/: CHECKLIST.md  QUICKSTART.md  README.md  REFERENCE.md  SUMMARY.md  test_brightness_dimming.cpp  test_countdown_logic.cpp  test_helpers.cpp  test_helpers.h  test_main.cpp  test_time_functions.cpp  test_utilities.cpp  test_weather_parsing.cpp
